--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -754,12 +754,16 @@
     }
    ],
    "source": [
+    "from itertools import *\n",
     "# TODO: One-hot encode the 'features_log_minmax_transform' data using pandas.get_dummies()\n",
     "features_final = pd.get_dummies(features_log_minmax_transform)\n",
     "\n",
     "# TODO: Encode the 'income_raw' data to numerical values\n",
-    "income = len(income_raw)\n",
+    "n_greater_50k_list = np.ones((n_greater_50k,), dtype=int)\n",
     "\n",
+    "# TODO: Number of records where individual's income is at most $50,000\n",
+    "n_at_most_50k_list = np.zeros((n_at_most_50k,), dtype=int)\n",
+    "income = list(chain(n_greater_50k_list, n_at_most_50k_list))\n",
     "# Print the number of features after one-hot encoding\n",
     "encoded = list(features_final.columns)\n",
     "print(\"{} total features after one-hot encoding.\".format(len(encoded)))\n",
@@ -780,24 +784,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn.cross_validation'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-ce9dd2d5e4df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Import train_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Split the 'features' and 'income' data into training and testing sets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m X_train, X_test, y_train, y_test = train_test_split(features_final, \n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.cross_validation'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set has 36177 samples.\n",
+      "Testing set has 9045 samples.\n"
      ]
     }
    ],
    "source": [
     "# Import train_test_split\n",
-    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Split the 'features' and 'income' data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(features_final, \n",
@@ -867,27 +868,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive Predictor: [Accuracy score: 3.9997, F-score: 0.0000]\n"
+     ]
+    }
+   ],
    "source": [
-    "'''\n",
-    "TP = np.sum(income) # Counting the ones as this is the naive case. Note that 'income' is the 'income_raw' data \n",
-    "encoded to numerical values done in the data preprocessing step.\n",
-    "FP = income.count() - TP # Specific to the naive case\n",
+    "\n",
+    "TP = np.sum(income) # Counting the ones as this is the naive case. Note that 'income' is the 'income_raw' data encoded to numerical values done in the data preprocessing step.\n",
+    "FP = income.count('1') - TP # Specific to the naive case\n",
     "\n",
     "TN = 0 # No predicted negatives in the naive case\n",
     "FN = 0 # No predicted negatives in the naive case\n",
-    "'''\n",
+    "\n",
+    "\n",
     "# TODO: Calculate accuracy, precision and recall\n",
-    "accuracy = None\n",
-    "recall = None\n",
-    "precision = None\n",
+    "accuracy = X_train.shape[0] / X_test.shape[0]\n",
+    "recall = TP / ( TP + FN )\n",
+    "precision = 0 # TP / ( TP + FP )\n",
     "\n",
     "# TODO: Calculate F-score using the formula above for beta = 0.5 and correct values for precision and recall.\n",
-    "fscore = None\n",
+    "beta = 0.5\n",
+    "fscore = (1 + pow(beta, 2)) * ((precision * recall) / ((pow(beta, 2) * precision) + recall))\n",
     "\n",
     "# Print the results \n",
     "print(\"Naive Predictor: [Accuracy score: {:.4f}, F-score: {:.4f}]\".format(accuracy, fscore))"
@@ -929,7 +937,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "Describe one real-world application in industry where the model can be applied.\n",
+    "    Fed my starving childern\n",
+    "What are the strengths of the model; when does it perform well?\n",
+    "    With high salary counts\n",
+    "What are the weaknesses of the model; when does it perform poorly?\n",
+    "    With low salary counts\n",
+    "What makes this model a good candidate for the problem, given what you know about the data?\n",
+    "Gaussian Naive Bayes"
    ]
   },
   {
@@ -950,56 +966,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Import two metrics from sklearn - fbeta_score and accuracy_score\n",
+    "from sklearn.metrics import fbeta_score, accuracy_score\n",
     "\n",
     "def train_predict(learner, sample_size, X_train, y_train, X_test, y_test): \n",
-    "    '''\n",
-    "    inputs:\n",
-    "       - learner: the learning algorithm to be trained and predicted on\n",
-    "       - sample_size: the size of samples (number) to be drawn from training set\n",
-    "       - X_train: features training set\n",
-    "       - y_train: income training set\n",
-    "       - X_test: features testing set\n",
-    "       - y_test: income testing set\n",
-    "    '''\n",
+    "    #'''\n",
+    "    #inputs:\n",
+    "    #   - learner: the learning algorithm to be trained and predicted on\n",
+    "    #   - sample_size: the size of samples (number) to be drawn from training set\n",
+    "    #   - X_train: features training set\n",
+    "    #   - y_train: income training set\n",
+    "     #  - X_test: features testing set\n",
+    "    #   - y_test: income testing set\n",
+    "    #'''\n",
     "    \n",
     "    results = {}\n",
     "    \n",
     "    # TODO: Fit the learner to the training data using slicing with 'sample_size' using .fit(training_features[:], training_labels[:])\n",
     "    start = time() # Get start time\n",
-    "    learner = None\n",
+    "    learner = sample_size.fit(training_features[:], training_labels[:])\n",
     "    end = time() # Get end time\n",
     "    \n",
     "    # TODO: Calculate the training time\n",
-    "    results['train_time'] = None\n",
+    "    results['train_time'] = start - end\n",
     "        \n",
     "    # TODO: Get the predictions on the test set(X_test),\n",
     "    #       then get predictions on the first 300 training samples(X_train) using .predict()\n",
     "    start = time() # Get start time\n",
-    "    predictions_test = None\n",
-    "    predictions_train = None\n",
+    "    predictions_test = set(X_test)\n",
+    "    predictions_train = samples(X_train).predict()\n",
     "    end = time() # Get end time\n",
     "    \n",
     "    # TODO: Calculate the total prediction time\n",
-    "    results['pred_time'] = None\n",
+    "    results['pred_time'] = start - end\n",
     "            \n",
     "    # TODO: Compute accuracy on the first 300 training samples which is y_train[:300]\n",
-    "    results['acc_train'] = None\n",
+    "    results['acc_train'] = y_train[:300]\n",
     "        \n",
     "    # TODO: Compute accuracy on test set using accuracy_score()\n",
-    "    results['acc_test'] = None\n",
+    "    results['acc_test'] = accuracy_score(y_train[:300])\n",
     "    \n",
     "    # TODO: Compute F-score on the the first 300 training samples using fbeta_score()\n",
-    "    results['f_train'] = None\n",
+    "    results['f_train'] = fbeta_score(y_train[:300])\n",
     "        \n",
     "    # TODO: Compute F-score on the test set which is y_test\n",
-    "    results['f_test'] = None\n",
+    "    results['f_test'] = y_test\n",
     "       \n",
     "    # Success\n",
     "    print(\"{} trained on {} samples.\".format(learner.__class__.__name__, sample_size))\n",
